--- a/src/components/confirmation-popup/ConfirmationPopup.css
+++ b/src/components/confirmation-popup/ConfirmationPopup.css
@@ -7,5 +7,5 @@
 }
 
 .padding-left {
-  padding-left: 12%;
+  padding-left: 0%;
 }
